--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,10 @@
-sign-language-translator[all]
+sign-language-translator
 Flask==2.3.2
 flask-cors==3.0.10
 python-dotenv==1.0.0
-sentence-transformers==2.2.2
-google-generativeai==0.1.0
-sign-language-translator==1.0.0
+sentence-transformers
+google-generativeai
+sign-language-translator
 PyPDF2==3.0.1
 python-docx==0.8.11
 qdrant-client==1.3.1
