--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tensorflow-models/handpose": "^0.1.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "lucide-react": "^0.469.0",
+    "next": "14.2.21",
     "react": "^18",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18",
-    "next": "14.2.21"
+    "react-webcam": "^7.2.0",
+    "shadcn": "^2.1.8"
   },
   "devDependencies": {
     "postcss": "^8",
