--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@radix-ui/themes": "^3.1.6",
+    "@swc/core": "^1.10.1",
+    "@swc/helpers": "^0.5.15",
     "@tensorflow-models/handpose": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.7.9",
@@ -27,6 +29,8 @@
     "react-dom": "^18",
     "react-router-dom": "^6.28.1",
     "react-webcam": "^7.2.0",
+    "run-parallel": "^1.2.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
