--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
+defusedxml==0.7.1
 faiss-cpu==1.9.0.post1
 filelock==3.16.1
 Flask==3.1.0
@@ -99,13 +100,4 @@ uritemplate==4.1.1
 urllib3==2.2.3
 Werkzeug==3.1.3
 yarl==1.18.3
-sign-language-translator
-Flask==2.3.2
-flask-cors==3.0.10
-python-dotenv==1.0.0
-sentence-transformers
-google-generativeai
-sign-language-translator
-PyPDF2==3.0.1
-python-docx==0.8.11
-qdrant-client==1.3.1
+youtube-transcript-api==0.6.3
